RESOLVED FIXED46931
ContextShadow should not call ceil() on m_blurRadius (an integer)
https://bugs.webkit.org/show_bug.cgi?id=46931
Summary ContextShadow should not call ceil() on m_blurRadius (an integer)
Jarred Nicholls
Reported 2010-09-30 13:21:44 PDT
ContextShadow.cpp, lines 157 and 170, call ceil(m_blurRadius) which is passed into IntRect::inflate(int). This is not only unnecessary (because m_blurRadius is an integer) but it causes a build error with MSVC9+ (haven't tested <MSVC9) about ambiguous call to ceil() which cannot take an integer parameter.
Attachments
Proposed patch (1.72 KB, patch)
2010-09-30 13:51 PDT, Jarred Nicholls
no flags
Jarred Nicholls
Comment 1 2010-09-30 13:51:58 PDT
Created attachment 69376 [details] Proposed patch
WebKit Commit Bot
Comment 2 2010-09-30 14:20:49 PDT
Comment on attachment 69376 [details] Proposed patch Clearing flags on attachment: 69376 Committed r68824: <http://trac.webkit.org/changeset/68824>
WebKit Commit Bot
Comment 3 2010-09-30 14:20:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.