2010-09-30  Jarred Nicholls  <jarred@sencha.com>

Reviewed by Darin Adler.

        Removed unnecessary calls to ceil() on an int
        Removing the call fixes MSVC build errors
        https://bugs.webkit.org/show_bug.cgi?id=46931

        * platform/graphics/ContextShadow.cpp:
        (WebCore::ContextShadow::calculateLayerBoundingRect):

Canonical link: https://commits.webkit.org/59456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68824 268f45cc-cd09-0410-ab3c-d52691b4dbfc